<resources>
  
    <string name="app_name" translatable="false">Qaseemati</string>
    <string name="hello">Hello 111</string>
    <string name="hello2">Hello 222</string>
    <string name="hello3">Hello 3333</string>
    <string name="lang_ar">ARABIC</string>
    <string name="lang_eng">ENGLISH</string>
    <string name="enterNumber">Please enter phone number</string>
    <string name="mobile">Mobile</string>
    <string name="login">Login</string>
    <string name="products">Products</string>

    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="personal_information">Personal Information</string>
    <string name="FName">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="LName">Last Name</string>
    <string name="email">Email</string>
    <string name="civil_id_nb">Civil ID Nb</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="alternate_contact_number">Alternate Contact Number</string>
    <string name="please_fill_the_below_fields_to_register">Please fill the below fields to register</string>
    <string name="available">Available</string>
    <string name="client_s_rating">Client\'s Rating</string>
    <string name="active_n_order">Active \n Orders</string>
    <string name="upcoming_orders">Upcoming \n Orders</string>
    <string name="dumy_text_underline">Beirut, Bir hassan, J Bld 5th floor.Block B</string>
    <string name="verification">Verification</string>
    <string name="enter_the_4_digit_code_sent_to_you_from_qasemati">Enter the 4 digit code sent to you from Qasemati</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="verify">Verify</string>
    <string name="account_status">Account Status</string>
    <string name="account_pending">Your account is pending approval</string>
    <string name="updated_how_notified">We will let you know by the updated status.\nHow would you like to get notified?</string>
    <string name="sms">SMS</string>
    <string name="update_in_email">You can always find your updates in your email</string>
    <string name="save">Save</string>
    <string name="please_fill_data">Please fill all data</string>
    <string name="ok">ok</string>
    <string name="enter_correct_email">Please enter a correct email</string>
    <string name="select_get_notified">Please select how to get notified</string>
    <string name="new_member_register">New Member? Register</string>
    <string name="cancel">Cancel</string>
    <string name="ads_place">Ads Place</string>
    <string name="our_services">Our Services</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="purchase">Purchase</string>
    <string name="rental">Rental</string>
    <string name="service">Service</string>
    <string name="type">Type</string>
    <string name="service_capacity">Service / Capacity</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="reset">RESET</string>
    <string name="order_date">Order Date</string>
    <string name="expected_delivery">Expected delivery</string>
    <string name="view_order_details">VIEW ORDER DETAILS</string>
    <string name="accept">ACCEPT</string>
    <string name="water_tank">Water Tank</string>
    <string name="address">Address</string>
    <string name="bank_account_information">Bank Account Information</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="iban">IBAN</string>
    <string name="active">Active</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="rate">Rate</string>
    <string name="order_amount">Order Amount</string>
    <string name="cancellation_reason">Cancellation reason</string>
    <string name="cancelled_by">Cancelled By:</string>
    <string name="description">Description</string>
    <string name="view_address">View Address</string>
    <string name="on_track">On Track?</string>
    <string name="delivered">Delivered ?</string>
    <string name="paid">Paid ?</string>
    <string name="search_by_client_name_product_order">Search by client name, product, order..</string>
    <string name="cart">Cart</string>
    <string name="size">Size</string>
    <string name="checkout">Checkout</string>
    <string name="price_effect">Note: the price is affected by the delivery location</string>
    <string name="select_delivery_address">select delivery address</string>
    <string name="select_time_and_delivery_date">select time and delivery date</string>
    <string name="order_summary">Order Summary</string>
    <string name="quantity">Quantity</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="do_you_have_a_coupon">Do you have a coupon?</string>
    <string name="apply">Apply</string>
    <string name="coupon_number">coupon number</string>
    <string name="find_server_provider">FIND SERVER PROVIDER</string>
    <string name="now">Now</string>
    <string name="specify">Specify</string>
    <string name="pending_cash_on_delivery">Pending cash on delivery</string>
    <string name="size_capacity">Size / Capacity</string>
    <string name="subtotal">Subtotal</string>
    <string name="additional_fees_due">Additional fees due to delivery address</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="knet_payment">Knet Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="place_order">Place Order</string>
    <string name="no_available_servce">Unfortunately there are no available service providers at the moment. Please try again later</string>
    <string name="go_to_services_page">Go to services page</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_sent">Verification code has been sent to your mobile number.</string>
    <string name="services">Services</string>
    <string name="track_order_C">TRACK ORDER</string>
    <string name="current_location">Current Location</string>
    <string name="location_on_map">Location On Map</string>
    <string name="saved_location">Saved Location</string>
    <string name="new_address">New Address</string>
    <string name="continue_">Continue</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="address_name">Address Name</string>
    <string name="street">Street</string>
    <string name="save_to_my_address">SAVE TO MY ADDRESS</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="more_details">More Details about your address</string>
    <string name="use_only_this_time">USE ONLY THIS TIME</string>
    <string name="search_for_your_location">Search for your location</string>
    <string name="move_the_map">Move the map and drop the pin to your address</string>
    <string name="mark_your_address">Mark your address on map for faster delivery</string>
    <string name="suggest_new_delivery_time">Suggest new delivery time</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="active_order_det">Active Order Details</string>
</resources>
