<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:id="@+id/rootLayout"

    android:layout_height="match_parent">


    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_start_end"
        android:fillViewport="true"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.ids.qasemti.custom.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_font"
                android:textColor="@color/gray_font_title"
                android:text="@string/new_address"
                android:layout_marginStart="@dimen/normal_margin"

                android:tag="new_address"

                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:textColor="@color/gray_font"
                android:id="@+id/etAddressName"
                android:maxLines="1"
                android:layout_marginTop="@dimen/margin_start_end"
                android:paddingStart="@dimen/margin_start_end"
                android:paddingEnd="@dimen/margin_start_end"
                android:hint="@string/address_name"
                android:textColorHint="@color/gray_medium_2"
                android:tag="address_name"
                android:textSize="@dimen/normal_font"
                android:background="@drawable/rounded_white_background"
                />

            <EditText
                android:layout_width="match_parent"
                android:minHeight="@dimen/edit_text_height"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_font"
                android:layout_marginTop="@dimen/normal_margin"
                android:paddingStart="@dimen/margin_start_end"
                android:id="@+id/etAddressBody"
                android:paddingEnd="@dimen/margin_start_end"
                android:hint="@string/address"
                android:textColorHint="@color/gray_medium_2"
                android:tag="address"
                android:textSize="@dimen/normal_font"
                android:background="@drawable/rounded_white_background"
                />

            <com.ids.qasemti.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:textColor="@color/gray_font_light"
                android:text="Mark your address on map for faster delivery"
                android:textSize="@dimen/normal_font"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:textColor="@color/gray_font"
                android:layout_marginTop="@dimen/normal_margin"
                android:paddingStart="@dimen/margin_start_end"
                android:paddingEnd="@dimen/margin_start_end"
                android:hint="@string/street"
                android:id="@+id/etStreet"
                android:textColorHint="@color/gray_medium_2"
                android:tag="street"
                android:textSize="@dimen/normal_font"
                android:background="@drawable/rounded_white_background"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:textColor="@color/gray_font"
                android:layout_marginTop="@dimen/normal_margin"
                android:paddingStart="@dimen/margin_start_end"
                android:paddingEnd="@dimen/margin_start_end"
                android:hint="@string/building"
                android:id="@+id/etBuilding"
                android:textColorHint="@color/gray_medium_2"
                android:tag="building"
                android:textSize="@dimen/normal_font"
                android:background="@drawable/rounded_white_background"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:textColor="@color/gray_font"
                android:layout_marginTop="@dimen/normal_margin"
                android:paddingStart="@dimen/margin_start_end"
                android:paddingEnd="@dimen/margin_start_end"
                android:hint="@string/floor"
                android:id="@+id/etFloor"
                android:textColorHint="@color/gray_medium_2"
                android:tag="street"
                android:textSize="@dimen/normal_font"
                android:background="@drawable/rounded_white_background"
                />









            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/msg_edit_text"
                android:textColor="@color/gray_font"
                android:layout_marginTop="@dimen/normal_margin"
                android:paddingStart="@dimen/margin_start_end"
                android:gravity="start"
                android:padding="@dimen/margin_start_end"
                android:hint="@string/more_details"
                android:textColorHint="@color/gray_medium_2"
                android:tag="more_details"
                android:textSize="@dimen/normal_font"
                android:background="@drawable/rounded_white_background"
                />





            <Button
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_width="match_parent"
                android:text="@string/save_to_my_address"
                android:textColor="@color/white"
                android:tag="save_to_my_address"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/blue_rounded"/>


            <Button
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_width="match_parent"
                android:text="@string/use_only_this_time"
                android:textColor="@color/redPrimary"
                android:tag="use_only_this_time"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/transparent"/>


        </LinearLayout>
    </ScrollView>



</LinearLayout>