<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/footer_height"
    android:orientation="horizontal"
    >



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:src="@drawable/footer_products"
            android:layout_gravity="center"/>

        <com.ids.qasemti.custom.CustomTextViewMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_font"
            android:text="@string/products"
            android:textColor="@color/gray_font"
            android:layout_marginTop="@dimen/mini_margin"
            android:layout_gravity="center"
            android:tag="products"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:src="@drawable/footer_orders"
            android:layout_gravity="center"/>

        <com.ids.qasemti.custom.CustomTextViewMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_font"
            android:text="@string/orders"
            android:textColor="@color/gray_font"
            android:layout_marginTop="@dimen/mini_margin"
            android:layout_gravity="center"
            android:tag="orders"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:src="@drawable/footer_home"
            android:layout_gravity="center"/>

        <com.ids.qasemti.custom.CustomTextViewMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_font"
            android:text="@string/home"
            android:textColor="@color/gray_font"
            android:layout_marginTop="@dimen/mini_margin"
            android:layout_gravity="center"
            android:tag="home"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:src="@drawable/footer_notifications"
            android:layout_gravity="center"/>

        <com.ids.qasemti.custom.CustomTextViewMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_font"
            android:text="@string/notifications"
            android:textColor="@color/gray_font"
            android:layout_marginTop="@dimen/mini_margin"
            android:layout_gravity="center"
            android:tag="@string/notifications"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:src="@drawable/footer_account"
            android:layout_gravity="center"/>

        <com.ids.qasemti.custom.CustomTextViewMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_font"
            android:text="@string/orders"
            android:textColor="@color/gray_font"
            android:layout_marginTop="@dimen/mini_margin"
            android:layout_gravity="center"
            android:tag="account"
            />

    </LinearLayout>
</LinearLayout>